--- a/handlers.yaml
+++ b/handlers.yaml
@@ -2,21 +2,22 @@
   hosts: server2
   tasks:
   - name: Installation of nginx
-   dnf:
-     name: nginx
-     state: present
+    dnf:
+      name: nginx
+      state: present
   - name: Enabling and starting nginx
     service:
-      name: nginux
+      name: nginx
       enabled: yes
       state: started
   - name: changing cf of nginx
     template:
-      src: nginux.confgrtn.j2
+      src: nginx.confgrtn.j2
       dest: /etc/nginx/conf.d/
     notify: reload nginx
   handlers:
   - name: reload nginx
     service:
       name: nginx
-      state: reload
+      state: reloaded
+
